syntax = "proto3";

package pb;
import "barber/barbershop.proto";

option go_package = "barbershop/src/pb/barber";


message GetBarberShopRequest {
    string id = 1;
}

message GetBarberShopResponse {
    BarberShop barber_shop = 1;
}
